--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <p>Header Logo</p>
             <ul>
                 <li><a href="Google.com">header link one</a></li>
-                <li><a href="Google.com">header link one</a></li>
-                <li><a href="Google.com">header link one</a></li>
+                <li><a href="Google.com">header link two</a></li>
+                <li><a href="Google.com">header link three</a></li>
             </ul>
         </div>
         <div class = "stuff">
@@ -24,7 +24,9 @@
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button>Sign up</button>
             </div>
-            <img src="./images/grasshopper.jpeg" alt="beautiful grasshopper">
+            <div class = 'image'>
+                <img src="./images/grasshopper.jpeg" alt="beautiful grasshopper">
+            </div>
         </div>
     </div>
     <div class="section2">
@@ -49,14 +51,16 @@
         </div>
     </div>
     <div class="section3">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just fillin up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. </p>
-        <p>-Thor, God of Thunder</p>
+        <div class="col">
+            <p class="quote"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em> </p>
+            <p class="author"><strong>-Thor, God of Thunder</strong></p>
+        </div>
     </div>
     <div class="section4">
         <div class="stuff">
             <div class="col">
-                <p>Call to action! It's time!</p>
-                <p>Sign up for our product by clicking that button right over there!</p>
+                <p class="line1">Call to action! It's time!</p>
+                <p class="line2">Sign up for our product by clicking that button right over there!</p>
             </div>
             <button>Sign up</button>
         </div>
